fixed header z-index issue with dropdown menus

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -270,6 +270,9 @@ form {
 /******************** Global Component Styles ********************/
 // Promo Bar
 header.site-header {
+  position: relative;
+  z-index: 9999; 
+
   .promo-nav--section {
     background: $primary-accent;
     color: #FFFFFF;
@@ -793,7 +796,7 @@ footer.site-footer {
   min-height: 25rem;
   max-height: 45rem;
   background: #000000;
-  z-index: 1;
+  z-index: 0;
   overflow: hidden;
 
   .background-container {
